added header section

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@
 
 @theme{
     --color-navy-blue: #1a3e62;
+    --color-logo-blue: #089cd0;
+    --color-btn-dark: #373737;
+    --color-btn-primary: #b3fc6a;
+    --color-hero-light: #fefdff;
 }
