--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,15 @@
     --color-btn-primary: #b3fc6a;
     --color-hero-light: #fefdff;
     --color-ring-green: #0c7737;
-    --animate-marquee: marquee var(--duration, 10s) linear infinite;
+    --animate-marquee: marquee var(--duration, 30s) linear infinite;
+    --animate-vertical-scroll: vertical-scroll var(--duration, 15s) linear infinite;
 
     @keyframes marquee {
     0%   { transform: translateX(0); }
     100% { transform: translateX(-50%); } /* move by half because content is duplicated */
+  }
+    @keyframes vertical-scroll {
+    0%   { transform: translateY(0); }
+    100% { transform: translateY(-50%); } /* move by half because content is duplicated */
   }
 }
