added FAQ content

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     --color-how-it-works: #eaeffb;
     --color-test-purple: #f0efff;
     --color-salesCard: #f0efff;
+    --color-faq-ans: #fef1e9;
     --animate-marquee: marquee var(--duration, 30s) linear infinite;
     --animate-vertical-scroll: vertical-scroll var(--duration, 15s) linear infinite;
 
